--- a/data.yaml
+++ b/data.yaml
@@ -2328,7 +2328,9 @@ library:
     clang:
     - since: C++23
       value: 202011
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202011
     msvc: null
 - name: __cpp_lib_is_swappable
   header_list: type_traits
