--- a/data.yaml
+++ b/data.yaml
@@ -3154,7 +3154,9 @@ library:
     clang:
     - since: C++23
       value: 202102
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202102
     msvc: null
 - name: __cpp_lib_transformation_trait_aliases
   header_list: type_traits
