--- a/data.yaml
+++ b/data.yaml
@@ -1627,7 +1627,9 @@ library:
     papers: P1964R2
     cppreference-description: '[[cpp/concepts|Standard library concepts]]'
   support:
-    clang: null
+    clang:
+    - since: C++20
+      value: 202002
     gcc:
     - since: C++20
       depends: __cpp_concepts
