--- a/data.yaml
+++ b/data.yaml
@@ -2153,7 +2153,10 @@ library:
     cppreference-description: '[[cpp/utility#Integer_comparison_functions|Integer
       comparison functions]]'
   support:
-    clang: null
+    clang:
+    - since: C++20
+      depends: defined(__cpp_concepts) && __cpp_concepts >= 201907
+      value: 202002
     gcc:
     - since: C++20
       value: 202002
