--- a/data.yaml
+++ b/data.yaml
@@ -1783,7 +1783,11 @@ library:
     clang:
     - since: C++20
       value: 201811
-    gcc: null
+    gcc:
+    - since: C++17
+      value: 201611
+    - since: C++20
+      value: 201811
     msvc:
     - since: C++20
       depends: defined(__cpp_constexpr_dynamic_alloc) && !defined(__clang__)
