libstdc++ changed the condition for __cpp_lib_semaphore

--- a/data.yaml
+++ b/data.yaml
@@ -2841,7 +2841,7 @@ library:
       value: 201907
     gcc:
     - since: C++20
-      depends: __cpp_lib_atomic_wait
+      depends: __cpp_lib_atomic_wait || _GLIBCXX_HAVE_POSIX_SEMAPHORE
       value: 201907
     msvc:
     - since: C++20
