--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -158,4 +158,5 @@ jobs:
 
             - name: Test MSVC STL with Clang
               run: python tools/do_test.py msvc library --verbose
-                    --cc clang-cl --extra-args -diagnostics:classic
+                    --cc clang-cl --std C++14 C++17 C++23
+                    --extra-args -diagnostics:classic
