--- a/data.yaml
+++ b/data.yaml
@@ -598,7 +598,9 @@ language:
     cppreference-description: '[[cpp/language/if|{{tt|consteval if}}]]'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202106
     msvc: null
 - name: __cpp_if_constexpr
   rows:
