--- a/data.yaml
+++ b/data.yaml
@@ -2424,7 +2424,9 @@ library:
     gcc:
     - since: C++23
       value: 202011
-    msvc: null
+    msvc:
+    - since: C++23
+      value: 202011
 - name: __cpp_lib_is_swappable
   header_list: type_traits
   rows:
