--- a/data.yaml
+++ b/data.yaml
@@ -2379,7 +2379,10 @@ library:
     cppreference-description: '{{ltt|cpp/types/is_layout_compatible|std::is_layout_compatible}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++20
+      depends: __has_builtin(__is_layout_compatible) && __has_builtin(__builtin_is_corresponding_member)
+      value: 201907
     msvc:
     - since: C++20
       depends: '!defined(__EDG__) && !defined(__clang__)'
