--- a/data.yaml
+++ b/data.yaml
@@ -2307,7 +2307,9 @@ library:
     cppreference-description: '{{ltt|cpp/utility/functional/invoke|std::invoke_r}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202106
     msvc:
     - since: C++23
       value: 202106
